--- a/views/showParks.ejs
+++ b/views/showParks.ejs
@@ -9,12 +9,13 @@
 <body>
     <div>
         <% park.forEach((park) => { %>
+            <p>ID: <%=park.id %></p>
             <p>Name: <%=park.name %></p>
             <p>Location: <%=park.location %></p>
             <P>Borough: <%=park.borough %></P>
             <p>Open: <%=park.open %></p>
             <p>Handicap Accessible: <%=park.handicap %></p>
-            <form method="POST" action="/parks/<%=id %>?_method=DELETE">
+            <form method="POST" action="/parks/<%=park.id %>?_method=DELETE">
             <button type="submit">Delete</button>
             </form>
             <% }) %>
