--- a/views/create.ejs
+++ b/views/create.ejs
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+    <link rel="stylesheet" href="./styles.css">
     <title>Find a new Restroom?</title>
 </head>
 <body>
-    <section class="hero is-primary is-medium is-bold">
+    <section class="hero is-success is-medium is-bold">
         <div class="hero-body">
           <div class="container">
             <h1 class="title">
