--- a/views/showOnePark.ejs
+++ b/views/showOnePark.ejs
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+    <link rel="stylesheet" href="./styles.css">
     <title>Document</title>
 </head>
 <body>
-    <section class="hero is-primary is-medium is-bold">
+    <section class="hero is-info is-medium is-bold">
         <div class="hero-body">
           <div class="container">
             <h1 class="title">
@@ -20,6 +21,17 @@
               Wee Care
             </h2>
           </div>
+        </div>
+        <div class="hero-foot">
+            <nav class="tabs">
+              <div class="container">
+                <ul>
+                  <li class="is-active">
+                      <a href="/parks/new">Post a New Listing</a></li>
+                  <li><a>Search</a></li>
+                </ul>
+              </div>
+            </nav>
         </div>
     </section>
     <% let link = parks.location.replace(/\s/g, '%20') %>
