--- a/views/showParks.ejs
+++ b/views/showParks.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>NYC Public Restrooms</title>
 </head>
 <body>
@@ -19,7 +20,19 @@
             </h2>
           </div>
         </div>
+        <div class="hero-foot">
+            <nav class="tabs">
+              <div class="container">
+                <ul>
+                  <li class="is-active">
+                      <a href="/parks/new">Post a New Listing</a></li>
+                  <li><a>Search</a></li>
+                </ul>
+              </div>
+            </nav>
+        </div>
       </section>
+
     <% park.forEach((park) => { %>
         <% let link = park.location.replace(/\s/g,'%20') %>
         <% let nextLink = link.replace(/,/g, '%2C') %>
