--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,4 +4,50 @@ body {
 
 p {
     font-size: 20px;
+    overflow: auto;
+}
+
+label {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+    overflow: auto;
+}
+
+img {
+    size: 256px 256px;
+}
+
+.button {
+    border-radius: 8px;
+    float: left;
+}
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+input {
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+
+.group:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+a {
+    text-decoration: none;
+}
+
+a:link, a:visited {
+    color: black;
+}
+
+a:hover {
+    color: blue;
 }
