--- a/views/create.ejs
+++ b/views/create.ejs
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>Find a new Restroom?</title>
 </head>
 <body>
-    <section class="hero is-success is-medium is-bold">
+    <section class="hero is-success is-bold">
         <div class="hero-body">
           <div class="container">
             <h1 class="title">
@@ -25,27 +25,35 @@
       </section>
       <div class="column is-large">
           <form action="/parks" method="post">
-              <label for="name">
-                Name:
-                <input type="text" name="name">
-              </label>
-              <label for="location">
-                  Location:
-                <input type="text" name="location">
-              </label>
-              <label for="borough">
-                  Borough:
-                  <input type="text" name="borough">
-              </label>
-              <label for="open">
-                  Is It Open?
-                  <input type="checkbox" name="open" value="Yes">
-              </label>
-              <label for="handicap">
-                  Handicap Accessible?
-                  <input type="checkbox" name="handicap" value="Yes">
-              </label>
-              <button type="submit">Create</button>
+            <div>
+                <label for="name">
+                  Name:
+                  <input type="text" name="name">
+                </label>
+            </div>
+            <div>
+                <label for="location">
+                    Location:
+                  <input type="text" name="location">
+                </label>
+            </div>
+            <div>
+                <label for="borough">
+                    Borough:
+                    <input type="text" name="borough">
+                </label>
+            </div>
+            <div>
+                <label for="open">
+                    Is It Open?
+                    <input type="checkbox" name="open" value="Yes">
+                </label>
+                <label for="handicap">
+                    Handicap Accessible?
+                    <input type="checkbox" name="handicap" value="Yes">
+                </label>
+            </div>
+              <button class="button is-light is-medium" type="submit">Create</button>
             </form>
       </div>
 </body>
