--- a/views/showOnePark.ejs
+++ b/views/showOnePark.ejs
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-    <link rel="stylesheet" href="./styles.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <title>A Park</title>
 </head>
 <body>
-    <section class="hero is-info is-medium is-bold">
+    <section class="hero is-info is-bold">
         <div class="hero-body">
           <div class="container">
             <h1 class="title">
@@ -37,7 +37,6 @@
     <% let link = parks.location.replace(/\s/g, '%20') %>
     <% let nextLink = link.replace(/,/g, '%2C') %>
     <div class="column is-large">
-        <p>ID: <%=parks.id %></p>
         <p>Name: <%=parks.name %></p>
         <p>Location: <a href="https://www.google.com/maps/search/?api=1&query=<%=nextLink%>"><%=parks.location %></a></p>
         <p>Borough: <%=parks.borough %></p>
@@ -46,9 +45,9 @@
     </div>
     <div class ="column is-large">
         <form method="POST" action="/parks/<%=parks.id %>?_method=DELETE">
-            <button class="button is-medium" type="submit ">Delete</button>
+            <button class="button is-danger is-medium" type="submit ">Delete</button>
         </form>
-        <button class="button is-medium"><a href="<%=parks.id%>/edit">Edit</a></button>
+        <button class="button is-info is-medium"><a href="<%=parks.id%>/edit">Edit</a></button>
     </div>
 </body>
 </html>
