WIP still working on search

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -9,21 +9,7 @@
 </head>
 <body>
     <div class="column is-large">
-        <form action="/parks" method="get">
-        <label for="name">
-            Name:
-            <input type="search" name="name">
-        </label>
-        <label for="location">
-            Location:
-            <input type="search" name="location">
-        </label>
-        <label for="borough">
-            Borough:
-            <input type="search" name="borough">
-        </label>
-        <button type="search">Search</button>
-        </form>
+        <p>Name: <%="search.name %></p>
     </div>
 
 </body>
